
Revision history for Log-Any-Adapter-DERIV
{{$NEXT}}

0.007     2024-03-15 07:29:29+00:00 UTC
    - sensitive information masking in log messages 

0.006     2023-10-26 19:53:35+08:00 Asia/Shanghai
    - Context addition to logger adapter

0.005     2023-08-24 09:54:52+00:00 UTC


    - key setting

0.004     2023-08-18 10:23:38+00:00 UTC
    - structured logging support

0.003     2022-11-23 08:34:16+00:00 UTC
    - fix failure under new Future v0.49

0.002   2021-10-28 05:30:00+00:00 UTC
    pod improvement

0.001   2021-10-28 05:30:00+00:00 UTC
    Add STDOUT
    Initial version.