@@ -58,7 +58,7 @@ my %WriteMakefileArgs = (
     "Test::MockTime::HiRes" => 0,
     "Test::More" => "0.98"
   },
-  "VERSION" => "0.007",
+  "VERSION" => "0.008",
   "test" => {
     "TESTS" => "t/*.t"
   }
