@@ -5,7 +5,7 @@ use strict;
 use warnings;
 
 # AUTHORITY
-our $VERSION = '0.007';
+our $VERSION = '0.008';
 
 use feature qw(state);
 use parent qw(Log::Any::Adapter::Coderef);
@@ -679,10 +679,10 @@ sub mask_sensitive {
     # Define a lookup list for all sensitive data regex patterns to be logged
 
     my @sensitive_patterns = (
-        qr/\b[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}\b/i, #Email
+        qr/\b[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}\b/i,          #Email
         qr/\b(?:token|key|oauth[ _-]?token)\s*[:=]\s*([^\s]+)/i, #Token or API key , = : value 
-        qr/(?:a1|r1|ct1)-[a-z0-9]{29}/i, #OAuth, Refresh, and CTrader token patterns
-        qr/[a-z0-9]{15}/i,  #API Token pattern
+        qr/(?:a1|r1|ct1)-[a-z0-9]{29}/i,                         #OAuth, Refresh, and CTrader token patterns
+        qr/\b[a-z0-9]{15}\b/i,                                   #API Token
     );
 
 
